[gd_scene load_steps=11 format=2]

[ext_resource path="res://Stages/Stage 1.gd" type="Script" id=1]
[ext_resource path="res://Assets/HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/GUI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Effects/Flash.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Background/Stars And Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Ship/Ship.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Enemy/Enemy Spawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Enemy/Enemy Clever.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Enemy/Enemy Kamikaze.tscn" type="PackedScene" id=10]

[node name="World" type="Node"]

script = ExtResource( 1 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="HUD" parent="HUDLayer" instance=ExtResource( 2 )]

[node name="GUILayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GUI" parent="GUILayer" instance=ExtResource( 3 )]

[node name="Camera" parent="." instance=ExtResource( 4 )]

[node name="Flash" parent="." instance=ExtResource( 5 )]

z = 3

[node name="StarsAndBackground" parent="." instance=ExtResource( 6 )]

[node name="Ship" parent="." instance=ExtResource( 7 )]

[node name="CleverSpawner" parent="." instance=ExtResource( 8 )]

Enemy = ExtResource( 9 )
timer_min = 1.0
timer_max = 3.0

[node name="KamikazeSpawner" parent="." instance=ExtResource( 8 )]

Enemy = ExtResource( 10 )

[connection signal="died" from="Ship" to="." method="on_player_died"]

[connection signal="hp_changed" from="Ship" to="HUDLayer/HUD" method="set_hp"]


